tests/output/self_hosted/leading_zero_error.txt
tests/leading_zero_error.oomph:2: error: leading zeros are not allowed

    print(0123)
          ^^^^

assert() failed in "self_hosted/error.oomph", line N
